# typst-rexllent

./: .gitignore  .gitmodules  .typstignore  Cargo.toml  README.md  build.sh  example.typ  index.wasm  justfile  test-table.xml  typst.toml  xml-parser.typ
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
crates/numfmt-rs/: Cargo.toml
crates/numfmt-rs/src/: lib.rs
crates/xlsx-parser-rs/: Cargo.toml
crates/xlsx-parser-rs/src/: lib.rs  numfmt.rs  utils.rs  worksheet_utils.rs
example/: example.typ  test.xlsx  typst_example.typ  typst_guy.xlsx
examples/: example.typ  monet.xlsx  test.xlsx  typst.xlsx  typst_example.typ
src/: cell_utils.rs  lib.rs  lib.typ  mod.typ  numfmt.js  numfmt.typ  parser.typ  rexllent.wasm  ssf.js  ssf.typ
tests/: test.typ
tests/data/: default.ods
tests/data/cell/: border.xlsx  formatted.xlsx
tests/data/font/: bold.xlsx  italic.xlsx  size.xlsx
tests/data/not_supported/: lowercase.xlsx
tests/features/: test.typ
tests/features/data/: default.xlsx
tests/features/data/cell/: alignment.xlsx  fill.xlsx  formatted.xlsx  incontinunity.xlsx  merged.xlsx
tests/features/data/font/: fill.xlsx  strike.xlsx  underline.xlsx
tests/features/data/index/: 1.xlsx
tests/features/data/math/: 1.xlsx
tests/features/data/not_supported/: rotate.xlsx  uppercase.xlsx
tests/features/data/table/: column_width.xlsx  hidden_row.xlsx  row_height.xlsx  zero_height.xlsx  zero_width.xlsx
tests/regressions/: test.typ
tests/regressions/issue-14/: Bib.bib  MRE_Bug.typ  Test.xlsx
typst-package/: mod.typ  rexllent.wasm
xlsx-parser-go/: go.mod  go.sum  main.go
xlsx-parser-go/xlsxparser/: cell_utils.go  data_structures.go  lib.go  utils.go  worksheet_utils.go
xlsx-parser-rs/: Cargo.toml
xlsx-parser-rs/src/: cell_utils.rs  data_structures.rs  lib.rs  utils.rs  worksheet_utils.rs
