[package]
name = "xlsx-parser-rs"
version = "0.1.0"
authors = ["hongjr03 <hongjr03@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
umya-spreadsheet = { version = "2.2.3", features = ["js"] }
getrandom = { version = "0.2.15", features = ["custom"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
typst-wasm-protocol = "0.0.2"

[profile.release]
opt-level = "s"
