[package]
name = "xlsx-parser-rs"
version = "0.1.0"
authors = ["hongjr03 <hongjr03@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
typst-plugin = ["wasm-minimal-protocol"]
default = ["typst-plugin"]

[dependencies]
umya-spreadsheet = { git = "https://github.com/sjfhsjfh/umya-spreadsheet.git", rev = "6810557942a3174ff484f970f7b643d10ba1a6e9" }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol.git", rev = "637508c", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"

[profile.release]
opt-level = "s"
