[package]
name = "numfmt-rs"
version = "0.1.0"
authors = ["hongjr03 <hongjr03@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"] # Critical for WASM

[dependencies]
typst-wasm-protocol = "0.0.2" # Or the latest version
rquickjs = { version = "0.9.0", features = [
    "bindgen",
] } # Or the latest version; 'full' is recommended
once_cell = "1.21.3" # For lazy static initialization

# Optional, if you plan to pass complex options as JSON strings
# serde_json = "1.0"
