[package]
name = "xlsx-parser-rs"
version = "0.3.4"
authors = ["hongjr03 <hongjr03@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
umya-spreadsheet = { version = "2.3.3", features = ["js"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
typst-wasm-protocol = "0.0.2"
once_cell = "1.21.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "s"
